refactoring#3 - display the result in <div>

--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@
 
 			   var result = calculate(t,u);
 			   
-			   alert("Temperature is "+t1+" in "+u1);
+			   $("#result").html("Temperature is "+result.temp+
+			   		"</b> in "+result.unit);
 			});
 		});
 	</script>
